fix nav spacing on events page

--- a/app/assets/stylesheets/_info.sass
+++ b/app/assets/stylesheets/_info.sass
@@ -1,4 +1,6 @@
 body.info
+  .top-bar
+    margin-bottom: 10px
   #members_grid
     margin-top: 10px
   .responsive-container
